[project]
name = "observe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arize-phoenix[evals]>=12.9.0",
    "ipykernel>=7.1.0",
    "llama-index>=0.14.7",
    "llama-index-embeddings-ollama>=0.8.3",
    "llama-index-llms-ollama>=0.9.0",
    "llama-index-llms-openai>=0.6.7",
    "llama-index-question-gen-guidance>=0.4.1",
    "llama-index-vector-stores-postgres>=0.7.1",
    "openinference-instrumentation-llama-index>=4.3.8",
    "psycopg2-binary>=2.9.11",
    "sqlalchemy>=2.0.44",
]
